message TencentProfile {
    required string open_id = 1;
    required string open_key = 2;
    required bool is_blue_vip = 3;
    required bool is_blue_year_vip = 4;
    required uint32 blue_vip_level = 5;
    required bool is_super_blue_vip = 6;
    required string tencent_nick_name = 7;
    required string tencent_figure_url = 8;
    required string tencent_gender = 9;
    required uint32 figure_prefix = 10;  
};
message LogoutRequest {
    required uint32 user_id = 1;
};

message PlayerSeat {
    required uint32 user_id = 1;
    required uint32 seat_id = 2;
};

message GameId {
    required uint32 game_id = 1;
};

message RoomIdList {
    repeated uint32 rooms_id = 1;
};

message Room {
    required uint32 room_id = 1;
    required RoomLevel level = 2;
};

message Item {
    required uint32 item_id = 1;
    required uint32 count = 2;
};
enum RoomLevel {
    CLASSIC = 1;
    CHEAT = 2;
    TRIPLE_KING = 3;
    STRUGGLE = 4;
    STRUGGLE_CHEAT = 5;
    HUNDRED = 6;
    CLASSIC_HIGHEST = 7;
    FOUR_PLAYER = 8;
    KNOCKOUT = 9;
};

message RoomId {
    required uint32 room_id = 1;
};

message PlayerInfo{    
    required uint64 currency = 1;
    required uint64 bank_currency = 2;
    required uint32 vip_title = 3;
    required uint32 player_type = 4;
    required bool   is_active = 5 [default= false];
    required uint32 daily_charge_times = 6;
    required uint32 daily_charge_money = 7;
    required uint32 charge_times = 8;
    required uint32 charge_money = 9;
    optional uint32 gamed_time = 10;
    optional uint32 daily_total_gamed_time = 11;
    optional string app_version = 12;
    required uint32 level = 13;
    required uint32 exp = 14;
    required uint32 max_continous_win_rounds = 15;
    required uint32 total_rounds = 16;
    required uint32 total_win_rounds = 17;
    required uint32 continous_win_rounds = 18;
    required uint32 last_exp_time = 19;
    required uint32 daily_exp = 20;
};

enum RedEnvelopeOperation{
    SEND = 1;
    RECV = 2;
    BOTH = 3;
};
enum CardRank {
    INVALIDE_RANK = 0;
    THREE = 3;
    FOUR = 4;
    FIVE = 5;
    SIX = 6;
    SEVEN = 7;
    EIGHT = 8;
    NINE = 9;
    TEN = 10;
    JACKY = 11;
    QUEENE = 12;
    KING = 13;
    ACE = 14;
    TWO = 15;
    JOKER = 16;
};

enum CardSuit {
    DIAMOND = 0;
    CLUB = 1;
    HEART = 2;
    SPADE = 3;
    MAGIC = 4;
    BLACK = 5;
    RED = 6;
    FLOWER = 7;
};

enum HandCardType {
    INVALIDE = 0;
    SINGLE_CARD = 1;
    PAIR_CARD = 2;
    SINGLE_STRAIGHT_CARD = 3;
    PAIR_STRAIGHT_CARD = 4;
    TRIPLE_CARD = 5;
    BOMB_CARD = 6;
    SUPER_BOMB_CARD = 7;
    MISSILE_CARD = 8;
    SMALL_STRAIGHT_CARD = 9;
    BIG_STRAIGHT_CARD = 10;
};

message DiamondResponse {
    required uint64 diamond = 1;
};

enum Gender {
    MALE = 1;
    FEMALE = 2;
    UNKNOWN = 3;
};

message CurrencyResponse {
    required uint64 currency = 1;
};

message PlayerIdList {
    repeated uint32 users_id = 1;
};

message SeatId {
    required uint32 seat_id = 1;
};

message PlayerId {
    required uint32 user_id = 1;
};

message PokerCard {
    required CardSuit suit = 1;
    required CardRank rank = 2;
};

